new exercise 5 file

--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My Three Paragraphs</title>
+    <title>Profile: Yaseen Rashid</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-      <p>This is paragraph one</p><br>
-      <p>This is paragraph two</p><br><br>
-      <p>This is paragraph three</p><br>
+      <header>Mr Yaseen Rashid</header>
+      
     <script src="script.js"></script>
   </body>
 </html>
