--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -7,8 +7,21 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-      <header>Mr Yaseen Rashid</header>
-      
+      <header>
+          <h1>Yaseen Rashid</h1>
+        </header>
+        <section>
+            <h2>Computer Sciene Student</h2>
+            <nav>
+                <li>
+                    <a>About Myself</a>
+                    <a>My Hobbies</a>
+                    <a>My CV</a>
+                    <a>Intersting Links</a>
+                </li>
+            </nav>
+        </section>
+
     <script src="script.js"></script>
   </body>
 </html>
