--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta lang="en">
     <meta name="viewport" content="width=device-width">
     <title>Profile: Yaseen Rashid</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
