--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -12,24 +12,39 @@
           <h1>Yaseen Rashid</h1>
           <h2>Computer Sciene Student</h2>
         </header>
-        <section>
-            <nav>
-                <ul>
-                    <li>
-                        <a>About Myself</a>
-                    </li>
-                    <li>
-                        <a>My Hobbies</a>
-                    </li>
-                    <li>
-                        <a>My CV</a>
-                    </li>
-                    <li>
-                        <a>Intersting Links</a>
-                    </li>
-                </ul>
-            </nav>
-        </section>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#aboutMe">About Myself</a>
+                </li>
+                <li>
+                    <a href="#myHobbies">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="#myCV">My CV</a>
+                </li>
+                <li>
+                    <a href="#myLinks">Intersting Links</a>
+                </li>
+            </ul>
+        </nav>
+        <article>
+            <section id="aboutMe">
+            
+            </section>
+            <section id="myHobbies">
+
+            </section>
+            <section id="myCV">
+
+            </section>
+            <section id="myLinks">
+
+            </section>
+        </article>
+        <footer>
+
+        </footer>
 
     <script src="script.js"></script>
   </body>
