--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -30,15 +30,29 @@
         </nav>
         <article>
             <section id="aboutMe">
-            
+                <h3>About Myself</h1>
+                <p>
+                    Hi there, I'm Yaseen Rashid, where I am studying Computer Science at Queen Mary's University of London, as well 
+                    working as a Math tutor for students up to A-Level Math.
+                </p>
             </section>
             <section id="myHobbies">
-
+                <h3>My Hobbies</h3>
+                <p>
+                    In my spare time, I enjoy boxing as I use to compete in tournements back home and go to the gym regularly to keep 
+                    myself fit. When I began University, I looked into other sport societies where I am now apart of the QM Rugby Team.
+                </p>
             </section>
             <section id="myCV">
+                <h3>My CV</h3>
+                <a>
+                    You can download my CV via this <a>link</a>
+                </a>
+                
 
             </section>
             <section id="myLinks">
+                <h3>Links</h3>
 
             </section>
         </article>
