--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -46,9 +46,9 @@
             <section id="myCV">
                 <h3>My CV</h3>
                 <a>
-                    You can download my CV via this <a>link</a>
+                    You can download my CV via this <a href="./my_CV.html" download>link</a>
                 </a>
-                
+
 
             </section>
             <section id="myLinks">
