--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -30,7 +30,10 @@
         </nav>
         <article>
             <section id="aboutMe">
-                <h3>About Myself</h1>
+                <h3>About Myself</h3>
+                <picture>
+                    <img src="./winterwonderland.jpg" alt="winter wonderland picture">
+                </picture>
                 <p>
                     Hi there, I'm Yaseen Rashid, where I am studying Computer Science at Queen Mary's University of London, as well 
                     working as a Math tutor for students up to A-Level Math.
