--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -32,7 +32,7 @@
             <section id="aboutMe">
                 <h3>About Myself</h3>
                 <picture>
-                    <img src="./winterwonderland.jpg" alt="winter wonderland picture">
+                    <img src="./winterwonderland.jpg" alt="winter wonderland picture" width="200px" height="200px">
                 </picture>
                 <p>
                     Hi there, I'm Yaseen Rashid, where I am studying Computer Science at Queen Mary's University of London, as well 
