--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <header>
-          <h1>Yaseen Rashid</h1>
+          <h1>Yaseen Rashid</h1><hr>
           <h2>Computer Sciene Student</h2>
         </header>
         <nav>
