--- a/webroot/topic2/my_homepage.html
+++ b/webroot/topic2/my_homepage.html
@@ -50,8 +50,10 @@
             <section id="myCV">
                 <h3>My CV</h3>
                 <a>
-                    You can download my CV via this <a href="./my_CV.html" download>link</a>
+                    You can download or view my CV below:</a>
                 </a>
+                <a href="./my_CV.html" target="_blank">View</a>
+                <a href="./my_CV.html" download>Download</a>
 
 
             </section>
