--- a/webroot/topic3/my_homepage_week3.html
+++ b/webroot/topic3/my_homepage_week3.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta lang="en">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="exercise4_s1.css">
     <title>Profile: Yaseen Rashid</title>
   </head>
   <body>
-      <header>
+      <header class="header_container">
           <h1>Yaseen Rashid</h1><hr>
           <h2>Computer Sciene Student</h2>
         </header>
@@ -27,7 +29,7 @@
                 </li>
             </ul>
         </nav>
-        <article>
+        <article class="article_container">
             <section id="aboutMe">
                 <h3>About Myself</h3>
                 <p>
@@ -71,7 +73,7 @@
                 </ul>
             </section>
         </article>
-        <footer>
+        <footer class="footer_container">
             <i>Copyright © 2022 Yaseen Rashid</i>
         </footer>
     <script src="script.js"></script>
