--- a/webroot/topic3/my_homepage_week3.html
+++ b/webroot/topic3/my_homepage_week3.html
@@ -13,7 +13,7 @@
           <h1>Yaseen Rashid</h1><hr>
           <h2>Computer Sciene Student</h2>
         </header>
-        <nav>
+        <nav class="navigation_container">
             <ul>
                 <li>
                     <a href="#aboutMe">About Myself</a>
@@ -31,25 +31,27 @@
         </nav>
         <article class="article_container">
             <section id="aboutMe">
-                <h3>About Myself</h3>
-                <p>
-                    Hi there, I'm Yaseen Rashid, where I am studying Computer Science at Queen Mary's University of London, as well 
-                    working as a Math tutor for students up to A-Level Math.
-                </p>
-                <figure>
-                    <img src="./winterwonderland.jpg" alt="winter wonderland picture" width="220px" height="220px">
-                    <figcaption>Yaseen Rashid</figcaption>
-                </picture>
-            </section>
+                <h3 class="article_header">About Myself</h3>
+                <section class="about_article">
+                    <figure class="frame">
+                        <img src="./winterwonderland.jpg" alt="winter wonderland picture" width="220pt" height="220pt">
+                        <figcaption>Yaseen Rashid</figcaption>
+                    </figure>
+                    <p>
+                        Hi there, I'm Yaseen Rashid, where I am studying Computer Science at Queen Mary's University of London, as well 
+                        working as a Math tutor for students up to A-Level Math.
+                    </p>
+                </section>
+                </section>
             <section id="myHobbies">
-                <h3>My Hobbies</h3>
+                <h3 class="article_header">My Hobbies</h3>
                 <p>
                     In my spare time, I enjoy boxing as I use to compete in tournements back home and go to the gym regularly to keep 
                     myself fit. When I began University, I looked into other sport societies where I am now apart of the QM Rugby Team.
                 </p>
             </section>
             <section id="myCV">
-                <h3>My CV</h3>
+                <h3 class="article_header">My CV</h3>
                 <a>
                     You can download or view my CV:</a>
                 </a>
@@ -58,7 +60,7 @@
                 <a href="./my_CV.html" download>Download</a>
             </section>
             <section id="myLinks">
-                <h3>Links</h3>
+                <h3 class="article_header">Links</h3>
                 <a>Some intersting links I have found: </a>
                 <ul>
                     <li>
