--- a/webroot/topic4/exercise2.html
+++ b/webroot/topic4/exercise2.html
@@ -28,38 +28,34 @@
                       <tr>
                         <td>
                             <figure>
-                              <img class="cast_image_frame" src="./coco_cast1.jpg">
+                              <a href="https://www.imdb.com/name/nm5645519/?ref_=ttfc_fc_cl_t1" target="_blank">
+                                <img class="cast_image_frame" src="./coco_cast1.jpg">
+                              </a>
                               <figcaption>Miguel</figcaption>
                             </figure>
                         </td>
                         <td>
                           <figure>
-                              <img class="cast_image_frame" src="./coco_cast2.jpg">
+                              <a href="https://www.imdb.com/name/nm0305558/?ref_=ttfc_fc_cl_t2" target="_blank">
+                                <img class="cast_image_frame" src="./coco_cast2.jpg">
+                              </a>
                               <figcaption>Héctor</figcaption>
                             </figure>                          
                           </td>
                           <td>
                               <figure>
-                                  <img class="cast_image_frame" src="./coco_cast3.jpg">
+                                  <a href="https://www.imdb.com/name/nm0000973/?ref_=ttfc_fc_cl_t3" target="_blank">
+                                    <img class="cast_image_frame" src="./coco_cast3.jpg">
+                                  </a>
                                   <figcaption>Ernesto</figcaption>
                                 </figure> 
                           </td>
                           <td>
                               <figure>
-                                  <img class="cast_image_frame" src="./coco_cast4.jpg">
+                                  <a href="https://www.imdb.com/name/nm0131781/?ref_=ttfc_fc_cl_t6" target="_blank">
+                                    <img class="cast_image_frame" src="./coco_cast4.jpg">
+                                  </a>
                                   <figcaption>Papa</figcaption>
-                                </figure> 
-                          </td>
-                          <td>
-                              <figure>
-                                  <img class="cast_image_frame" src="./coco_cast5.jpg">
-                                  <figcaption>Mamá</figcaption>
-                                </figure> 
-                          </td>
-                          <td>
-                              <figure>
-                                  <img class="cast_image_frame" src="./coco_cast6.jpg">
-                                  <figcaption>Abuelita</figcaption>
                                 </figure> 
                           </td>
                       </tr>
@@ -80,27 +76,19 @@
                                 <tr>
                                   <td>
                                       <figure>
-                                        <img class="cast_image_frame" src="./joker_cast1.jpg">
+                                          <a href="https://www.imdb.com/name/nm0001618/?ref_=tt_ov_st" target="_blank">
+                                            <img class="cast_image_frame" src="./joker_cast1.jpg">
+                                          </a>
                                         <figcaption>Joker</figcaption>
                                       </figure>
                                   </td>
                                   <td>
                                     <figure>
-                                        <img class="cast_image_frame" src="./joker_cast2.jpg">
+                                        <a href="https://www.imdb.com/name/nm0000134/?ref_=tt_ov_st" target="_blank">
+                                            <img class="cast_image_frame" src="./joker_cast2.jpg">
+                                        </a>
                                         <figcaption>Murray Franklin</figcaption>
                                       </figure>                          
-                                    </td>
-                                    <td>
-                                        <figure>
-                                            <img class="cast_image_frame" src="./joker_cast3.jpg">
-                                            <figcaption>Sophie Dumond</figcaption>
-                                          </figure> 
-                                    </td>
-                                    <td>
-                                        <figure>
-                                            <img class="cast_image_frame" src="./joker_cast4.jpg">
-                                            <figcaption>Penny Fleck</figcaption>
-                                          </figure> 
                                     </td>
                                 </tr>
                             </table>
@@ -123,25 +111,33 @@
                                 <tr>
                                   <td>
                                       <figure>
-                                        <img class="cast_image_frame" src="./spider_cast1.jpg">
+                                          <a href="https://www.imdb.com/name/nm4271336/?ref_=ttfc_fc_cl_t1" target="_blank">
+                                            <img class="cast_image_frame" src="./spider_cast1.jpg">
+                                          </a>
                                         <figcaption>Mile Morales</figcaption>
                                       </figure>
                                   </td>
                                   <td>
                                     <figure>
-                                        <img class="cast_image_frame" src="./spider_cast2.jpg">
+                                        <a href="https://www.imdb.com/name/nm2159926/?ref_=ttfc_fc_cl_t2" target="_blank">
+                                            <img class="cast_image_frame" src="./spider_cast2.jpg">
+                                        </a>
                                         <figcaption>Spider-Man</figcaption>
                                       </figure>                          
                                     </td>
                                     <td>
                                         <figure>
-                                            <img class="cast_image_frame" src="./spider_cast3.jpg">
+                                            <a href="https://www.imdb.com/name/nm2794962/?ref_=ttfc_fc_cl_t3" target="_blank">
+                                                <img class="cast_image_frame" src="./spider_cast3.jpg">
+                                            </a>
                                             <figcaption>Spider-Woman (Gwen)</figcaption>
                                           </figure> 
                                     </td>
                                     <td>
                                         <figure>
-                                            <img class="cast_image_frame" src="./spider_cast4.jpg">
+                                            <a href="https://www.imdb.com/name/nm0000115/?ref_=ttfc_fc_cl_t11" target="_blank">
+                                                <img class="cast_image_frame" src="./spider_cast4.jpg">
+                                            </a>
                                             <figcaption>Spider-Man Noir</figcaption>
                                           </figure> 
                                     </td>
@@ -154,7 +150,7 @@
             </tr>
             <tr>
               <td>4</td>
-              <td class="movie_row">Inseption (2010)</td>
+              <td class="movie_row">Inception (2010)</td>
               <td>
                 <img class="image_frame" src="./inseption.jpg" alt="inseption poster">
               </td>
@@ -166,32 +162,26 @@
                                 <tr>
                                   <td>
                                       <figure>
-                                        <img class="cast_image_frame" src="./inseption_cast1.jpg">
+                                        <a href="https://www.imdb.com/name/nm0000138/?ref_=tt_ov_st" target="_blank">
+                                            <img class="cast_image_frame" src="./inseption_cast1.jpg">
+                                        </a>
                                         <figcaption>Cobb</figcaption>
                                       </figure>
                                   </td>
                                   <td>
                                     <figure>
-                                        <img class="cast_image_frame" src="./inseption_cast2.jpg">
+                                        <a href="https://www.imdb.com/name/nm0330687/?ref_=tt_ov_st" target="_blank">
+                                            <img class="cast_image_frame" src="./inseption_cast2.jpg">
+                                        </a>                                        
                                         <figcaption>Arthur</figcaption>
                                       </figure>                          
                                     </td>
                                     <td>
                                         <figure>
-                                            <img class="cast_image_frame" src="./inseption_cast3.jpg">
+                                            <a href="https://www.imdb.com/name/nm0614165/?ref_=ttfc_fc_cl_t7" target="_blank">
+                                                <img class="cast_image_frame" src="./inseption_cast3.jpg">
+                                            </a>                                            
                                             <figcaption>Fischer</figcaption>
-                                          </figure> 
-                                    </td>
-                                    <td>
-                                        <figure>
-                                            <img class="cast_image_frame" src="./inseption_cast4.jpg">
-                                            <figcaption>Eames</figcaption>
-                                          </figure> 
-                                    </td>
-                                    <td>
-                                        <figure>
-                                            <img class="cast_image_frame" src="./inseption_cast5.jpg">
-                                            <figcaption>Ariadne</figcaption>
                                           </figure> 
                                     </td>
                                 </tr>
@@ -215,31 +205,41 @@
                                 <tr>
                                   <td>
                                       <figure>
-                                        <img class="cast_image_frame" src="./batman_cast1.jpg">
+                                          <a href="https://www.imdb.com/name/nm0000288/?ref_=ttfc_fc_cl_t1" target="_blank">
+                                            <img class="cast_image_frame" src="./batman_cast1.jpg">
+                                          </a>
                                         <figcaption>Batman</figcaption>
                                       </figure>
                                   </td>
                                   <td>
                                     <figure>
-                                        <img class="cast_image_frame" src="./batman_cast2.jpg">
+                                        <a href="https://www.imdb.com/name/nm0005132/?ref_=ttfc_fc_cl_t2" target="_blank">
+                                            <img class="cast_image_frame" src="./batman_cast2.jpg">
+                                        </a>                                        
                                         <figcaption>Joker</figcaption>
                                       </figure>                          
                                     </td>
                                     <td>
                                         <figure>
-                                            <img class="cast_image_frame" src="./batman_cast3.jpg">
+                                            <a href="https://www.imdb.com/name/nm0000323/?ref_=ttfc_fc_cl_t4" target="_blank">
+                                                <img class="cast_image_frame" src="./batman_cast3.jpg">
+                                            </a>                                            
                                             <figcaption>Alfred</figcaption>
                                           </figure> 
                                     </td>
                                     <td>
                                         <figure>
-                                            <img class="cast_image_frame" src="./batman_cast4.jpg">
+                                            <a href="https://www.imdb.com/name/nm0000198/?ref_=ttfc_fc_cl_t6" target="_blank">
+                                                <img class="cast_image_frame" src="./batman_cast4.jpg">
+                                            </a>                                            
                                             <figcaption>James Gordon</figcaption>
                                           </figure> 
                                     </td>
                                     <td>
                                         <figure>
-                                            <img class="cast_image_frame" src="./batman_cast5.jpg">
+                                            <a href="https://www.imdb.com/name/nm0001173/?ref_=ttfc_fc_cl_t3" target="_blank">
+                                                <img class="cast_image_frame" src="./batman_cast5.jpg">
+                                            </a>                                            
                                             <figcaption>Two Face</figcaption>
                                           </figure> 
                                     </td>
